--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/zubi1">
+    android:background="@drawable/mind">
 
     <!-- Scrollable Main Content -->
     <ScrollView
@@ -15,21 +15,21 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <!-- Greeting -->
             <TextView
                 android:text="Good Evening 🌙"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textSize="22sp"
                 android:textStyle="bold"/>
 
             <TextView
                 android:text="You’re Safe Here 🤍"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textColor="#666666"
                 android:layout_marginBottom="24dp"/>
 
@@ -37,14 +37,14 @@
             <TextView
                 android:text="How are you feeling?"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textStyle="bold"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_marginBottom="24dp">
 
                 <TextView
