--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="24dp"
     android:gravity="center_horizontal"
-    android:background="@drawable/zubi1">
+    android:background="@drawable/space">
 
     <!-- App Image / Illustration -->
     <ImageView
@@ -21,7 +21,7 @@
         android:layout_height="59dp"
         android:layout_marginBottom="10dp"
         android:text="Welcome Back "
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         android:textStyle="bold" />
 
@@ -59,6 +59,6 @@
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
         android:text="Don’t have an account? Sign Up"
-        android:textColor="#666666"
+        android:textColor="#FFFFFF"
         android:textSize="16dp" />
 </LinearLayout>
