--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    android:background="@drawable/zubi1">
+    android:background="@drawable/space">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,6 +19,7 @@
             android:text="Weekly Stress Levels"
             android:textSize="22sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_marginBottom="16dp"/>
 
         <!-- Card Background -->
@@ -40,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Monthly Anxiety Levels"
+            android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold"
             android:layout_marginBottom="16dp"/>
