--- a/app/src/main/res/layout/activity_remainders.xml
+++ b/app/src/main/res/layout/activity_remainders.xml
@@ -1,7 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/zubi1"
+    android:background="@drawable/space"
     android:padding="20dp">
 
     <LinearLayout
