--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/zubi1">
+    android:background="@drawable/space">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,17 +15,20 @@
             android:text="Create Account 🌱"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="@color/white"
             android:textSize="26sp"
             android:textStyle="bold"
             android:layout_marginBottom="24dp"/>
 
         <EditText
             android:hint="Name"
+            android:background="@drawable/card_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <EditText
             android:hint="Email"
+            android:background="@drawable/card_bg"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,6 +36,7 @@
 
         <EditText
             android:hint="Password"
+            android:background="@drawable/card_bg"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,7 +46,7 @@
             android:text="We never share your data 🔒"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#888888"
+            android:textColor="#FFFFFF"
             android:layout_marginTop="8dp"/>
 
         <Button
@@ -57,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Already have an account? Login"
-            android:textColor="#666666"
+            android:textColor="#FFFFFF"
             android:layout_marginTop="16dp"/>
 
     </LinearLayout>
