--- a/app/src/main/res/layout/item_journal.xml
+++ b/app/src/main/res/layout/item_journal.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="12dp"
-    android:background="@drawable/zubi1"
+    android:background="@drawable/space"
     app:cardElevation="4dp">
 
     <LinearLayout
