--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -29,4 +29,8 @@
         android:id="@+id/nav_achievements"
         android:icon="@drawable/achievements"
         android:title="Awards"/>
+    <item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/profile"
+        android:title="Profile" />
 </menu>
